swagger+ fix favorite=> notices
in model notice => favorite
