# controllers/notices/getFavorites.js
@@ -1,12 +1,15 @@
-const catchAsyncWrapper = require("../../helpers/catchAsyncWrapper");
+const { catchAsyncWrapper } = require("../../helpers");
+
 const User = require("../../models/user");
 
 const getFavorites = catchAsyncWrapper(async (req, res) => {
   const { _id } = req.user;
-  //  console.log('_id', _id)
+  
   const user = await User.find(_id).populate("favorite");
-  res.json(user[0].favorite);
-  // res.json(user);
+
+  res.status(200).json(user[0].favorite);
 });
 
 module.exports = getFavorites;
+
+// +
